--- a/pages/lodging.html
+++ b/pages/lodging.html
@@ -82,7 +82,7 @@
               <a href="#">
               <figure class="figure">
                   <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                  <figcaption class="figure-caption">INFO</figcaption>
+                  <figcaption class="figure-caption">Hotel - $125/night</figcaption>
                   <div class="form-check">
                     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
                     <label class="form-check-label" for="exampleRadios1">
@@ -96,7 +96,7 @@
               <a href="#">
                 <figure class="figure">
                     <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                    <figcaption class="figure-caption">INFO</figcaption>
+                    <figcaption class="figure-caption">Beach House - $250/night</figcaption>
                     <div class="form-check">
                       <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
                       <label class="form-check-label" for="exampleRadios1">
@@ -110,7 +110,7 @@
               <a href="#">
                 <figure class="figure">
                     <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                    <figcaption class="figure-caption">INFO</figcaption>
+                    <figcaption class="figure-caption">Camping Spot - $35/night</figcaption>
                     <div class="form-check">
                       <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
                       <label class="form-check-label" for="exampleRadios1">
@@ -123,6 +123,7 @@
           </div>
           <div class="text-center">
             <a href="./transportation.html"><button type="button" class="btn btn-info">Next</button></a>
+            <a href="./checkout.html"><button type="button" class="btn btn-success">Checkout</button></a>
           </div>
         </div>
       </section>
