--- a/pages/transportation.html
+++ b/pages/transportation.html
@@ -102,7 +102,7 @@
               <a href="#">
               <figure class="figure">
                   <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                  <figcaption class="figure-caption">INFO</figcaption>
+                  <figcaption class="figure-caption">Fjord Skipper - $40/day</figcaption>
                   <div class="form-check">
                     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
                     <label class="form-check-label" for="exampleRadios1">
@@ -116,7 +116,7 @@
               <a href="#">
                 <figure class="figure">
                     <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                    <figcaption class="figure-caption">INFO</figcaption>
+                    <figcaption class="figure-caption">Missam Dipper - $45/day</figcaption>
                     <div class="form-check">
                       <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
                       <label class="form-check-label" for="exampleRadios1">
@@ -130,7 +130,7 @@
               <a href="#">
                 <figure class="figure">
                     <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                    <figcaption class="figure-caption">INFO</figcaption>
+                    <figcaption class="figure-caption">Shevy Flipper - $30/day</figcaption>
                     <div class="form-check">
                       <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
                       <label class="form-check-label" for="exampleRadios1">
@@ -143,6 +143,7 @@
           </div>
           <div class="text-center">
             <a href="./events.html"><button type="button" class="btn btn-info">Next</button></a>
+            <a href="./checkout.html"><button type="button" class="btn btn-success">Checkout</button></a>
           </div>
         </div>
       </section>
