--- a/pages/events.html
+++ b/pages/events.html
@@ -74,7 +74,7 @@
               <a href="#">
               <figure class="figure">
                   <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                  <figcaption class="figure-caption">INFO</figcaption>
+                  <figcaption class="figure-caption">Bonfire - $25/guest</figcaption>
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios1" value="option1">
                     <label class="form-check-label" for="exampleRadios1">
@@ -88,7 +88,7 @@
               <a href="#">
                 <figure class="figure">
                     <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                    <figcaption class="figure-caption">INFO</figcaption>
+                    <figcaption class="figure-caption">Concert - $35/guest</figcaption>
                     <div class="form-check">
                       <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios1" value="option1">
                       <label class="form-check-label" for="exampleRadios1">
@@ -102,7 +102,7 @@
               <a href="#">
                 <figure class="figure">
                     <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                    <figcaption class="figure-caption">INFO</figcaption>
+                    <figcaption class="figure-caption">Dance - $40/guest</figcaption>
                     <div class="form-check">
                       <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios1" value="option1">
                       <label class="form-check-label" for="exampleRadios1">
@@ -115,6 +115,7 @@
           </div>
           <div class="text-center">
             <a href="./activities.html"><button type="button" class="btn btn-info">Next</button></a>
+            <a href="./checkout.html"><button type="button" class="btn btn-success">Checkout</button></a>
           </div>
         </div>
       </section>
